--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -8,9 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-
-
-
     <style>
         body {
             margin: 0;
@@ -49,11 +46,18 @@
             text-decoration: none;
         }
 
+        .video-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
     </style>
 </head>
 
 <body>
-    
+
     <div class="sidebar">
         <div class="sidebar-nav-link active">
             <div style="width: 100px; height: 100px; overflow: hidden; border-radius: 50%; margin-bottom: 10px;">
@@ -73,14 +77,29 @@
         <h3 style="margin-left: 800px; margin-top: 50px;">Welcome to...</h3>
     </div>
 
-    <video controls width="640" height="360" style="margin-left: 500px; margin-top: 50px;">
-        <source src="/menu.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
-    <!-- <img src="https://t3.ftcdn.net/jpg/04/22/15/54/360_F_422155424_TTgMW6tuAcoKtpoZdaSv5J6sfdtybCPu.jpg" alt="" style="display: flex; align-items: center; justify-content: center; margin-right: 35px;">a -->
+    <div class="video-container">
+        <video id="videoPlayer" controls width="640" height="360">
+            <source src="/menu.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function checkInput() {
+            var inputValue = document.getElementById("inputValue").value;
+            var message = document.getElementById("message");
+            var videoPlayer = document.getElementById("videoPlayer");
+
+            if (!isNaN(inputValue) && parseInt(inputValue) % 2 === 1) {
+                videoPlayer.style.display = "block";
+                message.innerHTML = "";
+            } else {
+                videoPlayer.style.display = "none";
+                message.innerHTML = "Vui lòng nhập một số lẻ.";
+            }
+        }
+    </script>
 </body>
- 
+
 </html>
