--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -77,7 +77,13 @@
         <h3 style="margin-left: 800px; margin-top: 50px;">Welcome to...</h3>
     </div>
 
-    <div class="video-container">
+    <div style="margin-left: 500px; margin-top: 50px;">
+        <input type="text" id="inputValue" placeholder="Check pass...">
+        <button onclick="checkInput()">Kiểm tra</button>
+        <p id="message" style="font-size: 14px; color: red;"></p>
+    </div>
+
+    <div class="video-container" id="videoContainer" style="display: none;">
         <video id="videoPlayer" controls width="640" height="360">
             <source src="/menu.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -89,14 +95,15 @@
         function checkInput() {
             var inputValue = document.getElementById("inputValue").value;
             var message = document.getElementById("message");
+            var videoContainer = document.getElementById("videoContainer");
             var videoPlayer = document.getElementById("videoPlayer");
 
             if (!isNaN(inputValue) && parseInt(inputValue) % 2 === 1) {
-                videoPlayer.style.display = "block";
+                videoContainer.style.display = "block";
                 message.innerHTML = "";
             } else {
-                videoPlayer.style.display = "none";
-                message.innerHTML = "Vui lòng nhập một số lẻ.";
+                videoContainer.style.display = "none";
+                message.innerHTML = "incorrect.";
             }
         }
     </script>
