--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -51,6 +51,10 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
     </style>
