--- a/views/question/createQuestion.ejs
+++ b/views/question/createQuestion.ejs
@@ -187,7 +187,7 @@
                 .then(response => response.json())
                 .then(data => {
                     console.log(data);
-                    // window.location.href = '/question';
+                    window.location.href = '/question';
                 })
                 .catch(error => {
                     console.error('Error creating question:', error);
